# CMake_Learning

./: README.md
01-basic/A-hello-cmake/: README.md
01-basic/A-你好-CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
01-basic/B-hello-headers/: CMakeLists.txt  README.md
01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
01-basic/C-static-library/: CMakeLists.txt  README.md
01-basic/C-static-library/include/static/: Hello.h
01-basic/C-static-library/src/: Hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt  README.md
01-basic/D-shared-library/include/shared/: Hello.h
01-basic/D-shared-library/src/: Hello.cpp  main.cpp
01-basic/E-installing/: CMakeLists.txt  README.md
01-basic/E-installing/include/shared/: Hello.h
01-basic/E-installing/src/: Hello.cpp
01-basic/F-build-type/: CMakeLists.txt  README.md  main.cpp
01-basic/G-compile-flags/: CMakeLists.txt  README.md  main.cpp
01-basic/H-third-party-library/: CMakeLists.txt  README.md  main.cpp
01-basic/I-compiling-with-clang/: CMakeLists.txt  README.md  main.cpp
01-basic/J-build-with-ninja/: CMakeLists.txt  README.md  main.cpp
01-basic/K-imported-targets/: CMakeLists.txt  README.md  main.cpp
01-basic/L-cpp-standard/: README.md
01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt  README.md  main.cpp
01-basic/L-cpp-standard/ii-cxx-standard/: CMakeLists.txt  README.md  main.cpp
01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt  README.md  main.cpp
02-subprojects/: README.md
02-subprojects/A-basic/: CMakeLists.txt  README.md
02-subprojects/A-basic/subbinary/: CMakeLists.txt  main.cpp
02-subprojects/A-basic/sublibrary1/: CMakeLists.txt
02-subprojects/A-basic/sublibrary1/include/sublib1/: sublib1.h
02-subprojects/A-basic/sublibrary1/src/: sublib1.cpp
02-subprojects/A-basic/sublibrary2/: CMakeLists.txt
02-subprojects/A-basic/sublibrary2/include/sublib2/: sublib2.h
03-code-generation/configure-files/: CMakeLists.txt  README.md  main.cpp  path.h.in  ver.h.in
07-package-management/: README.md
07-package-management/conan/i-basic/: main.cpp
